@@ -1,8 +1,8 @@
 set(MGL_HAVE_QT4 1)
 if(enable-json-sample)
-FIND_PACKAGE(Qt4 4.8 REQUIRED QtCore QtGui QtNetwork QtWebKit)
+FIND_PACKAGE(Qt4 4.8 REQUIRED QtCore QtGui QtNetwork QtWebKit QtOpenGL)
 else(enable-json-sample)
-FIND_PACKAGE(Qt4 4.8 REQUIRED QtCore QtGui)
+FIND_PACKAGE(Qt4 4.8 REQUIRED QtCore QtGui QtOpenGL)
 endif(enable-json-sample)
 if(NOT QT4_FOUND)
 	message(SEND_ERROR "Couldn't find Qt4 library.")
