@@ -3,6 +3,10 @@ find_package(Qt5Core REQUIRED)
 find_package(Qt5Widgets REQUIRED)
 find_package(Qt5Gui REQUIRED)
 find_package(Qt5PrintSupport REQUIRED)
+find_package(Qt5OpenGL REQUIRED)
+if(NOT Qt5OpenGL_FOUND)
+	message(SEND_ERROR "Couldn't find Qt5 OpenGL library.")
+endif(NOT Qt5OpenGL_FOUND)
 if(NOT Qt5Core_FOUND)
 	message(SEND_ERROR "Couldn't find Qt5 Core library.")
 endif(NOT Qt5Core_FOUND)
